--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 js-sys = "0.3.61"
 log = "0.4.17"
 serde = "1.0.152"
+serde_json = "1.0.100"
 wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
 wasm-bindgen-futures = "0.4.34"
 wasm-logger = "0.2.0"
