--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,5 @@ wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
 wasm-bindgen-futures = "0.4.34"
 wasm-logger = "0.2.0"
 web-sys = "0.3.61"
-web3 = { version = "0.19.0", default-features = false, features = ["http-rustls-tls", "wasm", "eip-1193"] }
+web3 = { git = "https://github.com/platonfloria/rust-web3.git", branch="feature/transport-either-to-support-wasm", version = "0.20.0", default-features = false, features = ["http-rustls-tls", "wasm", "eip-1193"] }
 yew = { version = "0.20.0", features=["csr"] }
